--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -13,6 +13,25 @@ img{
   margin-bottom: 1%;
 }
 
+.cardContact{
+  border: rgb(103, 102, 105) 3px solid;
+  display: flex;  
+  flex-direction: column;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  border-radius: 100px;
+}
+
+.cardContactInfo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
 .row{
   display: flex;  
   flex: 1;
@@ -26,6 +45,7 @@ img{
 .container{
   justify-content: center;
 }
+
 .details{
   font-size: 20px;
   color: rgb(97, 64, 128);
@@ -59,6 +79,15 @@ img{
   align-items: center;
   justify-content: center;
   flex:1
+}
+
+.banner_contact{
+    display: flex;
+    margin-top:30px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex:1
 }
 
 .form_panel {
@@ -116,11 +145,41 @@ img{
 }
 
 .img_icon {
-  align-self: center;
+    align-self: center;
     width:40px;
     background-color:#0C9;
     color:#FFF;
     border-radius:50px;
     text-align:center;
     box-shadow: 2px 2px 3px #999;  
+}
+
+.img_icon_contact {
+    align-self: center;
+    width: 75%;
+    height: 75%;
+    color:#FFF;
+}
+
+.txt_color_contact{
+    align-self: center;
+    color: blue;
+    text-align:center;
+    font-size: 20px;
+}
+
+.horizontal_line_grey {
+    align-self: center;
+    width: 90%;
+    height: 1px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #999;
+}
+
+.vertical_line_black {
+    width: 3px;
+    height: 320px;
+    margin-bottom: 10px;
+    background-color: #000;
 }
